still getting errors on blog pages.

--- a/nextjs-starter/posts/getting-started-with-nextjs-mdx/page.mdx
+++ b/nextjs-starter/posts/getting-started-with-nextjs-mdx/page.mdx
@@ -2,32 +2,16 @@
 title: Getting Started with Next.js
 publishedAt: '2025-04-22'
 summary: Learn how to build modern web applications with Next.js
+categories:
+  - nextjs
+  - mdx
 ---
-
-import MDXImage from './mdx.svg';
-import NextjsImage from './nextjs-icon.png';
 
 # Getting Started with Next.js
 
 Next.js is a React framework that enables functionality such as server-side rendering and static site generation.
 
 ## Why Next.js?
-
-<img
-  src='.mdx.svg'
-  alt='mdx logo'
-  className='rounded-lg shadow-md'
-  width='300'
-  height='300'
-/>
-
-<Image
-  src={NextjsImage}
-  alt='Nextjs logo'
-  width={200}
-  height={200}
-  className='rounded-lg shadow-md'
-/>
 
 - **Server-side Rendering**: Improves performance and SEO
 - **Static Site Generation**: Pre-renders pages at build time
@@ -42,14 +26,6 @@ npx create-next-app@latest my-next-app
 cd my-next-app
 npm run dev
 ```
-
-<Image
-  src={MDXImage}
-  alt='mdx logo'
-  width={136.5}
-  height={55.5}
-  className='rounded-lg shadow-md'
-/>
 
 ## Basic Routing
 
