--- a/nextjs-starter/posts/hello-world/page.mdx
+++ b/nextjs-starter/posts/hello-world/page.mdx
@@ -1,10 +1,11 @@
 ---
 title: Hello World
 publishedAt: '2025-04-23'
-summary: This is my first blog post using MDX in Next.js
+summary: This is a test summary
+categories:
+  - nextjs
+  - mdx
 ---
-
-import Image1 from './hello-world.jpg';
 
 # Hello World!
 
@@ -31,11 +32,3 @@ You can import and use React components directly in your MDX files:
 ## Conclusion
 
 MDX makes writing content with interactive components easy and fun!
-
-<Image
-  src={Image1}
-  alt='Hello World Image'
-  width={512}
-  height={384}
-  className='rounded-lg shadow-md'
-/>
