--- a/nextjs-starter/posts/hello-world/page.mdx
+++ b/nextjs-starter/posts/hello-world/page.mdx
@@ -15,6 +15,14 @@ This is my first blog post using **MDX** in Next.js!
 
 MDX is a format that lets you write JSX in your markdown documents. You can import components, like interactive charts or notifications, and embed them within your content.
 
+<img
+  src='/images/posts/mdx.svg'
+  alt='Hero image for Hello World post'
+  width={600}
+  height={600}
+  priority='true'
+/>
+
 ## Code Example
 
 ```javascript
