got tags and categories as single pages working and listing the blog posts. Other footer and blog enhanced

--- a/nextjs-starter/posts/hello-world/page.mdx
+++ b/nextjs-starter/posts/hello-world/page.mdx
@@ -1,10 +1,12 @@
 ---
 title: Hello World
-publishedAt: '2025-04-23'
+published_at: '2025-04-23'
 summary: This is a test summary
 categories:
   - nextjs
   - mdx
+  - summary
+tags: ['Introduction', 'Tailwind', 'Framer Motion', 'Front Pages']
 ---
 
 # Hello World!
