--- a/nextjs-starter/posts/getting-started-with-nextjs-mdx/page.mdx
+++ b/nextjs-starter/posts/getting-started-with-nextjs-mdx/page.mdx
@@ -1,10 +1,12 @@
 ---
 title: Getting Started with Next.js
-publishedAt: '2025-04-22'
+published_at: '2025-04-22'
 summary: Learn how to build modern web applications with Next.js
 categories:
   - nextjs
   - mdx
+  - tutorial
+tags: ['Next.js', 'Tailwind', 'Tutorial', 'JavaScript', 'Learning']
 ---
 
 # Getting Started with Next.js
