add tag and category summary pages

--- a/nextjs-starter/posts/hello-world/page.mdx
+++ b/nextjs-starter/posts/hello-world/page.mdx
@@ -18,7 +18,7 @@ This is my first blog post using **MDX** in Next.js!
 MDX is a format that lets you write JSX in your markdown documents. You can import components, like interactive charts or notifications, and embed them within your content.
 
 <img
-  src='/images/posts/mdx.svg'
+  src='/images/posts/hello-world/mdx.svg'
   alt='Hero image for Hello World post'
   width={600}
   height={600}
