Featured posts component for home page

--- a/nextjs-starter/posts/getting-started-with-nextjs-mdx/page.mdx
+++ b/nextjs-starter/posts/getting-started-with-nextjs-mdx/page.mdx
@@ -2,6 +2,7 @@
 title: Getting Started with Next.js
 published_at: '2025-04-22'
 summary: Learn how to build modern web applications with Next.js
+featured: false
 categories:
   - nextjs
   - mdx
