--- a/nextjs-starter/posts/markdown-cheatsheet/page.mdx
+++ b/nextjs-starter/posts/markdown-cheatsheet/page.mdx
@@ -2,6 +2,7 @@
 title: Markdown Cheatsheet
 published_at: '2025-04-29'
 summary: See how well Markdown is supported use MDX and Next.js.  Compared to the Markdown Cheatsheet.
+featured: true
 categories:
   - markdown
   - mdx
