--- a/nextjs-starter/src/app/contact/page.mdx
+++ b/nextjs-starter/src/app/contact/page.mdx
@@ -3,7 +3,7 @@
 This page is the Contact Us page
 
 <img
-  src='/images/posts/mdx.svg'
+  src='/images/hello-world.jpg'
   alt='Hero image for Hello World post'
   width={600}
   height={600}
